--- a/public/index.css
+++ b/public/index.css
@@ -287,3 +287,16 @@ img {
   transition: opacity 2s, display 0.5s;
   pointer-events: none;
 }
+
+#waitscreen {
+  width: 200vh;
+  height: 100vw;
+  z-index: 10;
+  background:white;
+  opacity: 0.5;
+  bottom: 0px;
+  left: 0px;
+  padding: 0;
+  margin: 0;
+  position: sticky;
+}
